<resources>
    <string name="app_name">BiblioMadrid</string>
    <string name="bt_alta_eventos">Alta Eventos</string>
    <string name="lb_nombre">Nombre</string>
    <string name="lb_descripcion">Descripción</string>
    <string name="lb_direccion">Dirección</string>
    <string name="lb_precio">Precio</string>
    <string name="lb_fecha">Fecha</string>
    <string name="lb_aforo">Aforo</string>
    <string name="lb_alta">Alta</string>
    <string name="lb_cancelar">Cancelar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="mensaje_precio">El precio es obligatorio</string>
    <string name="mensaje_cargando">Cargando datos</string>
    <string name="estudiar">Estudiar</string>
    <string name="estudiar_mucho">Estudiar mucho</string>
    <string name="_10">10 €</string>
    <string name="todo">TODO</string>
    <string name="botonRuta">botonRuta</string>
    <string name="titleButton">Indicar una ruta hacia la biblioteca</string>

    <string name="pref_title_ringtone">Tono de llamada</string>
    <string name="pref_ringtone_silent">Silencio</string>

    <string name="pref_title_notifications">Notificaciones</string>
    <string name="summary_choose_ringtone">Elija un sonido de notificación</string>
    <string name="pref_header_about">Acerca de...</string>
    <string name="summary_about">Somos un equipo de personas con ideas afines, especializadas en el desarrollo del desarrollo de aplicaciones para Android que crean nuevas tendencias en todo el espacio de la aplicación. Me alegro de ayudar de todos modos!</string>
    <string name="app_version">1.5</string>
    <string name="summary_support">¿Tienes alguna consulta? Estamos encantados de ayudarle</string>
    <string name="title_send_feedback">Enviar comentarios</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">Ver preguntas frecuentes</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Política de privacidad</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Condiciones y Términos</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="title_new_notification_sound">Habilitar mensajes de notificaciones</string>
    <string name="title_vibrate">Vibración</string>
    <string name="summary_vibrate">Vibración en las notificaciones</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="choose_email_client">Manda un mensaje...</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="acerca_de">Acerca de...</string>

    <string name="opinionTextico">Dar una opinión a la biblioteca</string>
    <string name="enviar">enviar</string>
    <string name="escribe_que_te_ha_parecido_esta_biblioteca">Escribe que te ha parecido esta biblioteca</string>
    <string name="textview">TextView</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
</resources>
