<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OpinionActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/top2"
        android:layout_width="1354dp"
        android:layout_height="453dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="452dp"
        android:src="@drawable/top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/top3"
        android:layout_width="1354dp"
        android:layout_height="420dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="399dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/base"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/opinionText"
            android:layout_width="321dp"
            android:layout_height="248dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:gravity="center|center_horizontal|top|center_vertical"
            android:hint="@string/escribe_que_te_ha_parecido_esta_biblioteca"
            android:inputType="text|textMultiLine"
            tools:targetApi="o" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp" />

        <Button
            android:id="@+id/enviarB"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/floating_button"
            android:text="@string/enviar"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>